# easy-kill

./: .gitignore  README.md
easy-kill/: Cargo.toml
easy-kill-cli/: Cargo.toml
easy-kill-cli/src/: checkbox.rs  main.rs
