[package]
name = "easy-kill-cli"
version = "0.1.3"
license = "MIT"
description = "Easy kill processes (binary)"
authors = ["Qian Linfeng <thewawar@gmail.com>"]
keywords = ["ekill", "kill", "easy-kill", "fkill"]
repository = "https://github.com/TheWaWaR/easy-kill"

[[bin]]
path = "src/main.rs"
name = "ekill"

[dependencies]
clap = "^2.31.2"
console = "0.6.1"
dialoguer = "^0.1.0"
regex = "^0.2.10"
lazy_static = "^1.0.0"
libc = "^0.2.40"
easy-kill = { path = "../easy-kill", version = "^0.1.0" }
